# api_french_words

./: Cargo.toml  README.MD  dico_compact.csv
src/: main.rs
src/controllers/: words.rs
src/services/: word_service.rs
